# hello-openclaw

./: .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: compile_gettext.py  qa.sh
src/: hello.py  telegram_bot.py
src/hello/: __init__.py  __main__.py
src/locales/en-US/LC_MESSAGES/: hello-openclaw.mo  hello-openclaw.po
src/locales/es-ES/LC_MESSAGES/: hello-openclaw.mo  hello-openclaw.po
src/locales/pt-BR/LC_MESSAGES/: hello-openclaw.mo  hello-openclaw.po
tests/: test_hello.py  test_module_invocation.py
